--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 :root {
     --cor-primaria:#030015;
     --cor-secundaria: #F2F2F2;
-    --cor-terciaria: #0000FF;
+    --cor-terciaria: #B0C4DE;
 
     --font-principal: 'Krona One', sans-serif;
     --font-secundaria: 'Montserrat', sans-serif;
